--- a/src/pages/acercaNosotros/styles.css
+++ b/src/pages/acercaNosotros/styles.css
@@ -1,3 +1,41 @@
 .border-right {
     border-right: 1px solid #ccc;
 }
+.background-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .background-image {
+    position: relative;
+    width: 100%; /* Ancho máximo permitido */
+    height: 100%;
+    max-width: 100vw;
+    max-height: 500px; /* Altura máxima permitida */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    opacity: 0.5;
+  }
+  
+  .text-overlay {
+    position: absolute;
+    top: 50%; /* Ajusta la posición vertical del texto */
+    left: 50%; /* Ajusta la posición horizontal del texto */
+    transform: translate(-50%, -50%); /* Centra el texto */
+    text-align: center; /* Centra el texto horizontalmente */
+    color: white; /* Color del texto */
+  }
+  
+  /* Estilos adicionales según tus necesidades */
+  .text-overlay h1 {
+    font-size: 3rem;
+  }
+  
+  .text-overlay p {
+    font-size: 1.5rem;
+  }
+  
