--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -68,7 +68,7 @@
 
 .nav-text a {
   text-decoration: none;
-  color: #2b2b2b;
+  color: white;
   font-size: 16px;
   width: 100%;
   height: 100%;
@@ -79,8 +79,8 @@
 }
 
 .nav-text a:hover {
-  background-color: #df1414;
-  color: #f3e2c2;
+  background-color: #EED112;
+  color: black;
 }
 
 .nav-menu-items {
