--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -14,7 +14,7 @@ button:hover{
 }
 .input_group_input{
   font: inherit;
-  color: #000;
+  color: grey;
   padding: 10px;
   border: none;
   border-radius: 4px;
@@ -22,15 +22,15 @@ button:hover{
   background-color: transparent;
   transition: outline-color 500ms; 
 }
-.input_group_input:is(:focus,:valid){
+/* .input_group_input:is(:focus,:valid){
   outline-color: #D92121;
-}
+} */
 .input_group_label{
   position: absolute;
   top: 0;
   left: 0;
   translate: 10px 10px;
-  color: #000;
+  color: grey;
   transition: translate 500ms, scale 500ms;
 }
 .input_group_input:focus + .input_group_label,
@@ -38,5 +38,28 @@ button:hover{
   padding-inline: 5px;
   translate: 10px -14px;
   scale: 0.8;
-  background-color: #D92121;
+  background-color: black;
+  color: white;
+}
+.background-logo {
+  position: relative;
+  width: 100%; /* Ancho máximo permitido */
+  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh; /* Altura máxima permitida */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  opacity: 0.5;
+}
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-image: url('../../assest/logo2.png');
+  background-size: cover;
+  background-position: center;
 }
