--- a/src/pages/acercaNosotros/styles.css
+++ b/src/pages/acercaNosotros/styles.css
@@ -39,3 +39,42 @@
     font-size: 1.5rem;
   }
   
+/* w-75 justify-content-center d-flex */
+.coach{
+  width: 75%;
+  /* display: flex;
+  justify-content: center; */
+  aspect-ratio: 1 /0.7;
+  border-radius: 8px;
+  position: relative;
+}
+.coach .image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s ease-in-out;
+}
+.coach::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border: 2px solid white;
+  border-radius: inherit;
+  opacity: 0;
+  transition: 0.4s ease-in-out;
+}
+.coach:hover img{
+  filter: grayscale(1) brightness(0.4);
+}
+.coach:hover::after{
+  opacity: 1;
+  inset: 20px;
+}
+.coach:hover .content .h2-coach {
+  scale: 1;
+  opacity: 1;
+}
+.coach:hover .content p {
+  opacity: 1;
+  transform: translateY(0);
+}
