--- a/src/components/sideBar/styles.css
+++ b/src/components/sideBar/styles.css
@@ -5,7 +5,7 @@
     color: white;
     position: fixed;
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -38,6 +38,12 @@
     padding: 0;
     padding-left: 5px;
     width: 100%;
+    height: 90%;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .li-inicio {
@@ -58,8 +64,8 @@
   }
 
   .div-table{
-    max-width: 65vw;
-    max-height: 65vh;
+    width: calc(80vw);
+    height: calc(70vh);
   }
   .cell-cedula{
     width: 250px;
@@ -69,6 +75,22 @@
   }
   .h6-recovery{
     width: 400px;
+  }
+
+  .div-separador{
+    height: 25%;
+  }
+
+  .radio-opcion{
+    width: 33%;
+  }
+
+  .tipo-usuario{
+    width: 66%;
+  }
+
+  .h1-login{
+    font-size: 50;
   }
 
   @media (max-width: 1060px) {
@@ -87,10 +109,12 @@
     }
     .sidebar {
       width: 25px; 
+      flex-direction: row;
     }
   
     .sidebar.compressed {
-      width: 270px; 
+      width: 255px; 
+      /* flex-direction: column; */
     }
   
     .sidebar li {
@@ -104,16 +128,37 @@
       width: 7%;
     }
     .div-table{
-      max-height: 47vh;
+      /* max-height: 47vh; */
+      width: calc(86vw);
+      height: calc(40vh);
     }
     .cell-cedula{
-      width: 150px;
+      width: 120px;
     }
     .cell-name{
       width: 300px;
     }
     .h6-recovery{
-      width: 350px;
+      width: 250px;
+    }
+    .radio-opcion{
+      width: 50%;
+    }
+    .ul-inicio{
+      height: 99%;
+      width: 100%;
+      padding-bottom: 0;
+      margin-bottom: 0;
+    }
+    .div-in{
+      display: flex;
+      flex-direction: column;
+    }
+    .h1-login{
+      font-size: 40;
+    }
+    .tipo-usuario{
+      width: 100%;
     }
   }
 
