--- a/src/pages/agregarEntrenador/styles.css
+++ b/src/pages/agregarEntrenador/styles.css
@@ -51,6 +51,10 @@
     margin-left: 24px;
 }
 
+.pading-primero{
+    padding-left: 0;
+}
+
 @media screen and (max-width: 1060px) {
     .div-nombre{
         width: 100%;
@@ -85,5 +89,8 @@
     }
     .nota{
         margin-left: 0px;
+    }
+    .pading-primero{
+        padding-left: 25px;
     }
 }
