--- a/src/components/romboide/styles.css
+++ b/src/components/romboide/styles.css
@@ -1,10 +1,21 @@
 .romboide {
   width: 400px; /* Ancho del romboide rectangular */
-  height: 100px; /* Altura del romboide rectangular */
+  height: auto; /* Altura del romboide rectangular */
   background-color: black; /* Color de fondo del romboide rectangular */
   transform: skew(20deg); /* Inclinación para formar el romboide rectangular */
   margin: 20px; /* Margen opcional */
   justify-content: center;
   text-align: center;
   padding: 0;
+  transform: skewX(20deg);
+}
+
+.texto-rombo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Invierte el ángulo de inclinación para el texto */
+  color: white;
+  font-size: 16px;
+  font-weight: normal; /* Garantiza que el texto sea normal */
 }
