--- a/src/components/romboide/styles.css
+++ b/src/components/romboide/styles.css
@@ -1,9 +1,9 @@
 .romboide {
-  width: 400px; /* Ancho del romboide rectangular */
+  width: 50%; /* Ancho del romboide rectangular */
   height: auto; /* Altura del romboide rectangular */
   background-color: black; /* Color de fondo del romboide rectangular */
   transform: skew(20deg); /* Inclinación para formar el romboide rectangular */
-  margin: 20px; /* Margen opcional */
+  margin: 10px; /* Margen opcional */
   justify-content: center;
   text-align: center;
   padding: 0;
@@ -18,4 +18,11 @@
   color: white;
   font-size: 16px;
   font-weight: normal; /* Garantiza que el texto sea normal */
+}
+
+
+@media (max-width: 1060px) {
+    .romboide{
+      width: 92%;
+    }
 }
