--- a/src/pages/horarios/styles.css
+++ b/src/pages/horarios/styles.css
@@ -11,3 +11,81 @@
     height: 100vh; /* Establece la altura del body al 100% del alto de la ventana */
     overflow: hidden;
   }
+
+  .margin-horarios{
+    margin-top: 20px;
+  }
+
+  .wrapper {
+    background-image: url('../../assest/team.jpg');
+    background-size: 100% 100%;
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    align-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.6);
+
+  }
+
+  .horarios{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    transform: translate(1/2, 1/2);
+  }
+
+  .div-horarios{
+    width: 50%;
+  }
+
+  .div-clases{
+    width: 33%;
+  }
+
+  .div-clas-titulo{
+    width: 60%;
+  }
+
+  .clases{
+    display: flex;
+  }
+
+  .div-central{
+    padding-top: 25px;
+  }
+
+  .height{
+    height: 0px;
+  }
+
+  @media (max-width: 1060px) {
+    .margin-horario{
+      margin-top: 35px;
+      padding-top: 30px;
+    }
+    .div-horarios{
+      width: 90%;
+    }
+    .clases{
+      display: none;
+    }
+    .div-clases{
+      width: 85%;
+    }
+    .div-clas-titulo{
+      width: 90%;
+    }
+    .div-central{
+      padding-top: 0px;
+    }
+    .height{
+      height: 50px;
+    }
+    .wrapper{
+      height: 100%;
+    }
+    
+  }
