--- a/src/pages/prueba/styles.css
+++ b/src/pages/prueba/styles.css
@@ -1,25 +1,43 @@
-/* nav{
-    width: 100%;
-    max-width: 1200px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 24px 40px;
-} */
-nav ul{
-    display: flex;
-    gap: 1.2rem;
-    list-style: none;
-}
-.menu-icon{
-    display: none;
-}
-@media only screen and (max-width:600px){
-    .menu-icon{
-        display: block;
+#root {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+  }
+  
+  .logo {
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
+  }
+  .logo:hover {
+    filter: drop-shadow(0 0 2em #646cffaa);
+  }
+  .logo.react:hover {
+    filter: drop-shadow(0 0 2em #61dafbaa);
+  }
+  
+  @keyframes logo-spin {
+    from {
+      transform: rotate(0deg);
     }
-    nav ul{
-        display: none;
+    to {
+      transform: rotate(360deg);
     }
-}
+  }
+  
+  @media (prefers-reduced-motion: no-preference) {
+    a:nth-of-type(2) .logo {
+      animation: logo-spin infinite 20s linear;
+    }
+  }
+  
+  .card {
+    padding: 2em;
+  }
+  
+  .read-the-docs {
+    color: #888;
+  }
   
