--- a/src/pages/contactanos/styles.css
+++ b/src/pages/contactanos/styles.css
@@ -37,6 +37,10 @@ footer {
     width:190px;
   }
 
+  .margin-contac{
+    margin-top: 40px;
+  }
+
   @media (max-width: 1060px) {
     .cedula{
       width: 90%;
@@ -55,5 +59,9 @@ footer {
     .logo{
       width: 150px;
       margin-top: 1.5rem;
+    }
+    .margin-contac{
+      margin-top: 0px;
+      padding-top: 0px;
     }
   }
