--- a/src/pages/horarios/styles.css
+++ b/src/pages/horarios/styles.css
@@ -16,16 +16,19 @@
     margin-top: 20px;
   }
 
-  .wrapper {
-    background-image: url('../../assest/team.jpg');
+  .wrapper-horarios {
+    /* background-image: url('../../assest/team.jpg'); */
+    background-image: url('../../assest/team2.png');
     background-size: 100% 100%;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-position: center;
     align-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.6);
-
+    background-color: rgba(255, 255, 255, 0.486);
+    /* filter: blur(5px); */
+    /* background-color: darkgray; */
+    /* filter: brightness(10%); */
   }
 
   .horarios{
