--- a/src/pages/agregarCliente/styles.css
+++ b/src/pages/agregarCliente/styles.css
@@ -43,7 +43,15 @@
     width: 75%;
 }
 
-@media screen and (max-width: 990px) {
+.huella{
+    display: flex;
+    flex-direction: row;
+}
+
+@media screen and (max-width: 1060px) {
+    .huella{
+        display: none;
+    }
     .div-nombre{
         width: 100%;
         padding-right:10px;
