--- a/src/pages/editarCliente/styles.css
+++ b/src/pages/editarCliente/styles.css
@@ -1,4 +1,4 @@
-.div-nombre{
+.div-nom{
     width: 66%;
     display: flex;
     flex-direction: row;
@@ -47,8 +47,16 @@
     display: none;
 }
 
+.hue{
+    display: flex;
+    width: 33%;
+}
+
 @media screen and (max-width: 990px) {
-    .div-nombre{
+    .hue{
+        display: none;
+    }
+    .div-nom{
         width: 100%;
         padding-right:10px;
         display: flex;
