cambios en suscripcion y clientes si se vencio

--- a/src/pages/contactanos/styles.css
+++ b/src/pages/contactanos/styles.css
@@ -20,7 +20,7 @@ footer {
     width: 50%;
   }
 
-  .nombre{
+  .nombre-contactanos{
     width: 70%;
   }
 
@@ -46,7 +46,7 @@ footer {
       width: 90%;
       margin-top: 0.5rem;
     }
-    .nombre{
+    .nombre-contactanos{
       width: 90%;
     }
     .padin{
